--- a/availSeats.html
+++ b/availSeats.html
@@ -181,13 +181,13 @@ td {
 <!-- ===== MAIN LAYOUT ===== -->
 <div class="main-layout">
 
-  <div class="ads">Google Ads</div>
+  <div class="ads">.</div>
 
   <div class="results-center">
     <table id="resultsTable"></table>
   </div>
 
-  <div class="ads">Google Ads</div>
+  <div class="ads">.</div>
 
 </div>
 
