--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@ main {
   <a href="index.html">Home</a>
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
+    <a href="availSeats.html">Seat Availability</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html"><b>Register Complaint</a></b>
    <a href="contactus.html">Contact Us</a>
