--- a/availSeats.html
+++ b/availSeats.html
@@ -43,23 +43,24 @@ body {
   gap: 10px;
   justify-content: center;
   align-items: flex-end;
-  max-width: 1000px;
+  max-width: 900px; /* aligned with middle results panel */
 }
 
 .search-panel .field {
   display: flex;
   flex-direction: column;
   flex: 1;
-  min-width: 180px;
+  min-width: 160px;
 }
 
 .search-panel button {
   padding: 8px;
   min-width: 120px;
   cursor: pointer;
+  flex: 0 0 auto;
 }
 
-/* Main Layout */
+/* ===== MAIN LAYOUT ===== */
 .main-layout {
   display: flex;
   justify-content: center;
@@ -83,7 +84,7 @@ body {
   margin: 10px;
 }
 
-/* Table / Cards */
+/* ===== TABLE / CARDS ===== */
 table {
   width: 100%;
   border-spacing: 10px;
@@ -136,12 +137,15 @@ td {
     flex-direction: column;
     align-items: stretch;
   }
+  .search-panel .field {
+    width: 100%;
+  }
   .ads { display: none; }
   td { width: 100%; display: block; }
   table { border-spacing: 0; }
 }
 
-/* Choices.js overrides */
+/* ===== Choices.js overrides ===== */
 .choices__inner {
   background-color: white !important;
   color: black !important;
@@ -152,6 +156,10 @@ td {
 .choices__list--dropdown {
   max-height: 200px;
   overflow-y: auto;
+  background-color: white !important;
+}
+.choices__list--dropdown .choices__item {
+  color: black !important;
 }
 .choices__list--dropdown::-webkit-scrollbar {
   width: 10px;
@@ -180,12 +188,12 @@ td {
 <div class="search-panel">
   <div class="field">
     <label for="fromSelect">From</label>
-    <select id="fromSelect" placeholder="Type to search..."></select>
+    <select id="fromSelect"></select>
   </div>
 
   <div class="field">
     <label for="toSelect">To</label>
-    <select id="toSelect" placeholder="Type to search..."></select>
+    <select id="toSelect"></select>
   </div>
 
   <div class="field">
@@ -225,6 +233,7 @@ fetch(`${GAS_URL}?action=stations`)
   .then(d => {
     fromSelect.innerHTML = `<option value="">Select station...</option>`;
     toSelect.innerHTML = `<option value="">Select station...</option>`;
+
     d.rows.forEach(s => {
       stationMap[s.stationNameEn] = s.stationCode;
       const opt1 = document.createElement("option");
@@ -291,26 +300,4 @@ function showResults(data) {
         <div class="train-name">${t.trainClassName}</div>
         <div class="route">
           From <span class="from">${t.departureStationCode}</span>
-          → To <span class="to">${t.destinationStationCode}</span>
-        </div>
-        <div class="time-line">
-          ${t.departureTime} → ${t.arrivalTime}
-        </div>
-    `;
-    t.seatTypeList.forEach(s => {
-      html += `
-        <div class="seat">
-          ${s.seatTypeNameEn} :
-          <span class="seat-count">${s.surplus}</span>
-          (<span class="seat-fare">${s.price ?? "N/A"}</span>)
-        </div>
-      `;
-    });
-    html += `</div>`;
-    cell.innerHTML = html;
-  });
-}
-</script>
-
-</body>
-</html>
+          → To <span class="to">${t.destinatio
